# Pedro_Crud_Simples

./: .env  .gitignore  Dockerfile  Jenkinsfile  README.md  commands.sh  db.sqlite3  docker-compose.yml  init.sql  jenkinsfile  main.py  manage.py  prometheus.yml  pyproject.toml  requirements.txt
aerotur/: asgi.py  logconfig.py  settings.py  urls.py  wsgi.py
app1/: Dockerfile  manage.py  requirements.txt
app1/aerotur/: metrics.py  settings.py
app1/app_aerotur/: views.py
app1/app_aerotur/migrations/: 0001_initial.py
app1/app_aerotur/templates/: home.html
app2/: .env  Dockerfile  manage.py
app2/aerotur/: metrics.py  settings.py  urls.py
app2/app_aerotur/migrations/: 0002_pessoa.py
app2/app_aerotur/templates/: home.html
app_aerotur/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
app_aerotur/migrations/: 0003_delete_produto_alter_pessoa_cpf.py
app_aerotur/templates/: add_pessoa.html  criar_produto.html  deletar_pessoa.html  deletar_produto.html  editar_pessoa.html  editar_produto.html  home.html
app_crud/: models.py  urls.py  utils.py  views.py
app_crud/migrations/: 0001_initial.py
projeto/: logconfig.py  settings.py  urls.py
templates/1_app_crud/home/: home.html
