[project]
name = "pedro-crud-simples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.8.1",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "colorama==0.4.6",
    "deprecated==1.2.18",
    "django==5.1.5",
    "django-prometheus==2.3.1",
    "dotenv==0.9.9",
    "fontawesomefree==6.6.0",
    "googleapis-common-protos==1.70.0",
    "granian>=2.5.0",
    "grpcio==1.71.0",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "loguru==0.7.3",
    "packaging==24.2",
    "prometheus-client==0.21.1",
    "protobuf==5.29.4",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.1.0",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "sqlparse==0.5.3",
    "typing-extensions==4.13.2",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "whitenoise==6.9.0",
    "win32-setctime==1.2.0",
    "wrapt==1.17.2",
    "zipp==3.21.0",
]
